fix: alignment for single string

--- a/src/core/index.css
+++ b/src/core/index.css
@@ -122,6 +122,10 @@
   @apply hidden;
 }
 
+.field-object > fieldset {
+  @apply space-y-1;
+}
+
 [type="text"]:focus,
 input:where(:not([type])):focus,
 [type="email"]:focus,
